--- a/Grupo KR/index.html
+++ b/Grupo KR/index.html
@@ -100,7 +100,9 @@
             através dos nossos <br>TALENTOS KR</h2>
 
             <p class="hero-text">
-              Visão empreendedora focada em resultados.
+              Gestão inteligente aplicada em resultados. 
+              Gerenciamento empresarial, de pessoas e processos. 
+              Foco na continuidade do negócio.
             </p>
 
             <a href="#" class="btn btn-primary">Saiba Mais</a>
